--- a/.github/workflows/deploy-ec2.yml
+++ b/.github/workflows/deploy-ec2.yml
@@ -22,7 +22,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
+        uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -30,7 +30,7 @@ jobs:
 
       - name: Login to Amazon ECR
         id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v1
+        uses: aws-actions/amazon-ecr-login@v2
 
       # --- BUILD & PUSH BACKEND ---
       - name: Build & Push Backend
@@ -67,30 +67,32 @@ jobs:
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+          FRONTEND_URL: http://${{ secrets.EC2_HOST }}
+          AWS_REGION: ${{ env.AWS_REGION }}
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ env.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
-          # Passamos as variáveis de ambiente do GitHub para dentro do SSH
-          envs: ECR_REGISTRY,ECR_REPOSITORY_BACKEND,ECR_REPOSITORY_FRONTEND,GEMINI_API_KEY
+          envs: ECR_REGISTRY,ECR_REPOSITORY_BACKEND,ECR_REPOSITORY_FRONTEND,GEMINI_API_KEY,FRONTEND_URL,AWS_REGION
           script: |
-            # 1. Login no ECR (usando a role da máquina ou as chaves configuradas)
-            aws ecr get-login-password --region us-east-2 | docker login --username AWS --password-stdin $ECR_REGISTRY
+            # 1. Login no ECR usando a região dinâmica
+            aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $ECR_REGISTRY
             
             # 2. Vai para a pasta
             cd /home/ubuntu/app
             
-            # 3. Atualiza as imagens (Pull)
-            # Exportamos as vars para o docker-compose enxergar
+            # 3. Exporta as variáveis para o ambiente do Linux remoto
             export ECR_REGISTRY=$ECR_REGISTRY
             export ECR_REPOSITORY_BACKEND=$ECR_REPOSITORY_BACKEND
             export ECR_REPOSITORY_FRONTEND=$ECR_REPOSITORY_FRONTEND
             export GEMINI_API_KEY=$GEMINI_API_KEY
+            export FRONTEND_URL=$FRONTEND_URL
             
+            # 4. Atualiza as imagens (Pull)
             docker-compose -f docker-compose.prod.yml pull
             
-            # 4. Reinicia os containers
+            # 5. Reinicia os containers
             docker-compose -f docker-compose.prod.yml up -d --remove-orphans
             
-            # 5. Limpeza de imagens antigas para não lotar o disco
+            # 6. Limpeza de imagens antigas
             docker image prune -f
