--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - ./backend/.env
     environment:
       # Avisa ao backend que o frontend rodará nesta porta (para o CORS)
-      - FRONTEND_URL=http://localhost:5173
+      - FRONTEND_URL={FRONTEND_URL}
 
   # Serviço Frontend (React/Nginx) ---
   web:
