--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -15,6 +15,8 @@ services:
     # Substitua pelo URI do seu repositório ECR do frontend
     image: ${ECR_REGISTRY}/${ECR_REPOSITORY_FRONTEND}:latest
     container_name: assistente-gpt-frontend
+    environment:
+      - VITE_API_URL=${VITE_API_URL}
     restart: always
     ports:
       - "80:80"
