--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,32 +3,27 @@ FROM node:20 AS builder
 
 WORKDIR /app
 
-# Copia apenas os arquivos de dependência primeiro (para aproveitar o cache do Docker)
+# Copia apenas dependências
 COPY package.json package-lock.json ./
 
-# Instala as dependências (npm ci é mais rápido e seguro para builds automatizados)
 RUN npm ci
 
-# Copia o resto do código fonte
+# Copia tudo (incluindo .env.production)
 COPY . .
 
-# Executa o build do Vite (Isso cria a pasta /dist com os arquivos otimizados)
+# Build do Vite
 RUN npm run build
 
 # Stage 2: Final
-# Usamos Nginx Alpine para servir os arquivos estáticos (Muito leve)
 FROM nginx:alpine
 
 WORKDIR /usr/share/nginx/html
 
-# Remove a página padrão do Nginx
 RUN rm -rf ./*
 
-# Copia os arquivos estáticos gerados no Stage 1 (builder) para a pasta do Nginx
+# Copia o build
 COPY --from=builder /app/dist .
 
-# Expõe a porta 80 (Porta padrão para servidor web)
 EXPOSE 80
 
-# Inicia o Nginx em primeiro plano
 ENTRYPOINT ["nginx", "-g", "daemon off;"]
